# SpectraWallet

./: .gitignore  ARCHITECTURE.md  Cargo.toml  ContentView.swift  Makefile  filesystem.md
.cargo/: config.toml
Core/: Cargo.toml  README.md  tokens.toml
Core/src/: addressing.rs  app_core.rs  balance_cache.rs  catalog.rs  endpoint_reliability.rs  fetch.rs  ffi.rs  history.rs  history_cache.rs  history_store.rs  http.rs  http_ffi.rs  import.rs  lib.rs  localization.rs  main.rs  migration.rs  price.rs  refresh.rs  refresh_engine.rs  resources.rs  secret_store.rs  send.rs  send_flow_helpers.rs  send_machine.rs  service.rs  state.rs  store.rs  tokens.rs  transactions.rs  transfer.rs  types.rs  utxo.rs  wallet_db.rs
Core/src/app_state/: events.rs  mod.rs  store.rs
Core/src/chains/: aptos.rs  bitcoin.rs  bitcoin_cash.rs  bitcoin_hd.rs  bitcoin_sv.rs  cardano.rs  dogecoin.rs  evm.rs  icp.rs  litecoin.rs  mod.rs  monero.rs  near.rs  polkadot.rs  solana.rs  stellar.rs  sui.rs  ton.rs  tron.rs  xrp.rs
Core/src/core/: addressing.rs  balance_observer.rs  catalog.rs  endpoint_reliability.rs  fetch.rs  ffi.rs  history.rs  localization.rs  mod.rs  refresh_engine.rs  resources.rs  service.rs  store.rs  tokens.rs  wallet_db.rs
Core/src/core/chains/: aptos.rs  bitcoin.rs  bitcoin_cash.rs  bitcoin_sv.rs  cardano.rs  dogecoin.rs  evm.rs  icp.rs  litecoin.rs  mod.rs  monero.rs  near.rs  polkadot.rs  solana.rs  stellar.rs  sui.rs  ton.rs  tron.rs  xrp.rs
Core/src/diagnostics/: export.rs  mod.rs
Core/tools/uniffi-bindgen/: Cargo.toml
Spectra/Derivation/Rust/: Cargo.toml  README.md
Spectra/Derivation/Rust/include/: spectra_derivation.h
Spectra/Derivation/Rust/src/: app_core.rs  lib.rs  main.rs
Spectra/Derivation/Rust/src/core/: catalog.rs  fetch.rs  ffi.rs  history.rs  import.rs  localization.rs  migration.rs  mod.rs  refresh.rs  send.rs  state.rs  store.rs  transactions.rs  types.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml  DERIVATION_WORKFLOW.md
core/data/: AppEndpointDirectory.json  DERIVATION_WORKFLOW.md  DerivationPresets.json  derivation_presets.toml  tokens.toml
core/embedded/: AppEndpointDirectory.json  ChainVisualRegistry.json  DerivationPresets.json  DerivationRequestCompilationPresets.json  TokenVisualRegistry.json
core/src/: app_core.rs  catalog.rs  chains.rs  diagnostics_sanitizer.rs  ffi.rs  formatting.rs  lib.rs  localization.rs  receive.rs  registry.rs  resources.rs  self_tests.rs  service.rs  tokens.rs  tor.rs  validation.rs
core/src/app_core/: derivation_paths.rs  mod.rs  registry_data.rs
core/src/chains/: bitcoin.rs  bitcoin_hd.rs  bitcoin_sv.rs  evm.rs  litecoin.rs  mod.rs  near.rs  polkadot.rs  registry.rs  solana.rs
core/src/chains/aptos/: fetch.rs  mod.rs  send.rs
core/src/chains/bitcoin/: derive.rs  fetch.rs  mod.rs  send.rs
core/src/chains/bitcoin_cash/: derive.rs  fetch.rs  mod.rs  send.rs
core/src/chains/bitcoin_sv/: derive.rs  fetch.rs  mod.rs  send.rs
core/src/chains/cardano/: derive.rs  fetch.rs  mod.rs  send.rs
core/src/chains/dogecoin/: derive.rs  fetch.rs  mod.rs  send.rs
core/src/chains/evm/: derive.rs  fetch.rs  mod.rs  send.rs
core/src/chains/icp/: derive.rs  fetch.rs  mod.rs  send.rs
core/src/chains/litecoin/: derive.rs  fetch.rs  mod.rs  send.rs
core/src/chains/monero/: fetch.rs  mod.rs  send.rs
core/src/chains/near/: fetch.rs  mod.rs  send.rs
core/src/chains/polkadot/: derive.rs  fetch.rs  mod.rs  send.rs
core/src/chains/solana/: derive.rs  fetch.rs  mod.rs  send.rs
core/src/chains/stellar/: derive.rs  fetch.rs  mod.rs  send.rs
core/src/chains/sui/: fetch.rs  mod.rs  send.rs
core/src/chains/ton/: derive.rs  fetch.rs  mod.rs  send.rs
core/src/chains/tron/: fetch.rs  mod.rs  send.rs
core/src/chains/xrp/: derive.rs  fetch.rs  mod.rs  send.rs
core/src/derivation/: addressing.rs  bitcoin_primitives.rs  dispatch.rs  funds_finder.rs  import.rs  mod.rs  presets.rs  primitives.rs  runtime.rs  tests.rs  types.rs  utxo_hd.rs  validation.rs  xpub_walker.rs
core/src/derivation/chains/: aptos.rs  bitcoin.rs  bitcoin_cash.rs  bitcoin_gold.rs  bitcoin_sv.rs  bittensor.rs  cardano.rs  dash.rs  decred.rs  dogecoin.rs  evm.rs  icp.rs  kaspa.rs  litecoin.rs  mod.rs  monero.rs  near.rs  polkadot.rs  solana.rs  stellar.rs  sui.rs  ton.rs  tron.rs  xrp.rs  zcash.rs
core/src/derivation/runtime/: mod.rs  tests.rs
core/src/diagnostics/: aggregate.rs  degraded.rs  export.rs  mod.rs  sanitizer.rs  self_tests.rs
core/src/fetch/: balance_cache.rs  balance_decoder.rs  balance_observer.rs  history.rs  history_cache.rs  history_decode.rs  history_store.rs  http.rs  http_ffi.rs  mod.rs  price.rs  refresh.rs  refresh_engine.rs  transactions.rs
core/src/fetch/chains/: aptos.rs  bitcoin.rs  bitcoin_cash.rs  bitcoin_gold.rs  bitcoin_sv.rs  bittensor.rs  cardano.rs  dash.rs  decred.rs  dogecoin.rs  evm.rs  icp.rs  kaspa.rs  litecoin.rs  mod.rs  monero.rs  near.rs  polkadot.rs  solana.rs  stellar.rs  sui.rs  ton.rs  tron.rs  xrp.rs  zcash.rs
core/src/platform/: catalog.rs  localization.rs  mod.rs  resources.rs
core/src/registry/: mod.rs  tokens.rs
core/src/send/: ethereum.rs  flow.rs  flow_helpers.rs  machine.rs  mod.rs  payload.rs  preview_decode.rs  preview_types.rs  transfer.rs  utxo.rs  verification.rs
core/src/send/chains/: aptos.rs  bitcoin.rs  bitcoin_cash.rs  bitcoin_gold.rs  bitcoin_sv.rs  bittensor.rs  cardano.rs  dash.rs  decred.rs  dogecoin.rs  evm.rs  icp.rs  kaspa.rs  litecoin.rs  mod.rs  monero.rs  mweb.rs  near.rs  polkadot.rs  solana.rs  stellar.rs  substrate.rs  sui.rs  ton.rs  tron.rs  xrp.rs  zcash.rs
core/src/service/: chain_client.rs  helpers.rs  mod.rs  standalone.rs  types.rs
core/src/staking/: service.rs
core/src/staking/chains/: aptos.rs  cardano.rs  icp.rs  polkadot.rs  solana.rs  sui.rs
core/src/store/: chain_aliases.rs  mod.rs  password_verifier.rs  persistence_models.rs  secret_store.rs  seed_envelope.rs  state.rs  tests.rs  wallet_db.rs  wallet_domain.rs
core/src/store/app_state/: events.rs  mod.rs  token_helpers.rs
core/src/store/persistence/: mod.rs
(+696 files in other folders)
