[package]
name = "spectra_core"
version = "0.1.0"
edition = "2021"
publish = false
autobins = false

[lib]
name = "spectra_core"

[dependencies]
bip39 = "2"
bitcoin = { version = "0.32", features = ["rand-std"] }
bs58 = { version = "0.5", features = ["check"] }
bech32 = "0.11"
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "precomputed-tables", "zeroize"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "digest", "fast", "pkcs8", "rand_core", "zeroize"] }
hex = "0.4"
pbkdf2 = "0.12"
secp256k1 = { version = "0.29", features = ["alloc", "global-context", "hashes", "recovery", "rand"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
slip10 = "0.4"
tiny-keccak = { version = "2", features = ["keccak"] }
thiserror = "2"
uniffi = { version = "0.29", features = ["tokio"] }
unicode-normalization = "0.1"
zeroize = { version = "1", features = ["alloc", "derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json", "gzip"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
once_cell = "1"
toml = { version = "0.8", default-features = false, features = ["parse"] }
sha3 = "0.10"
blake2 = "0.10"
base64 = "0.22"
rand = "0.8"
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
wiremock = "0.6"
