[package]
name = "spectra_core"
version = "0.1.0"
edition = "2021"
publish = false
autobins = false

[lib]
name = "spectra_core"

[dependencies]
# ─── Stage 1: BIP-39 mnemonic → 64-byte seed ────────────────────────
# Wordlist + checksum validation (also used by diagnostics_sanitizer);
# Unicode NFKD on mnemonic/passphrase; PBKDF2-HMAC-SHA512 (2048 rounds).
bip39 = { version = "2", features = ["all-languages"] }
unicode-normalization = "0.1"
pbkdf2 = "0.12"

# ─── Stage 2-4: BIP-32 / SLIP-0010 / sr25519 key derivation ─────────
# secp256k1: secp curve scalars, BIP-32 CKDpriv/CKDpub, taproot tweaks.
# ed25519-dalek + curve25519-dalek: SLIP-0010 ed25519 child keys, signing.
# schnorrkel: Substrate sr25519 (Polkadot) mini-secret expansion.
# hmac + sha2: HMAC-SHA512 used by both BIP-32 and SLIP-0010.
secp256k1 = { version = "0.29", features = ["alloc", "global-context", "hashes", "recovery", "rand"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "digest", "fast", "pkcs8", "rand_core", "zeroize"] }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc", "precomputed-tables", "zeroize"] }
schnorrkel = { version = "0.11", default-features = false, features = ["std"] }
hmac = "0.12"
sha2 = "0.10"

# ─── Stage 5: address encoding ──────────────────────────────────────
# bs58: Solana, Polkadot SS58, XRP (Ripple alphabet), Tron, Bitcoin
#   legacy Base58Check (also xpub serialization in bitcoin_primitives).
# bech32: Bitcoin SegWit (P2WPKH / P2TR), Cardano Shelley.
# ripemd: Hash160 = RIPEMD160(SHA256(x)) for BTC/XRP/HD-key fingerprint.
# tiny-keccak: Keccak-256 for EVM, Tron, Sui addresses.
# blake2: Blake2b for Polkadot SS58, Sui, Cardano credential hashes.
# sha3: Keccak variant used by Aptos.
# data-encoding: Base32 (RFC 4648) for Stellar StrKey addresses.
# crc: CRC16-XMODEM checksums for Stellar StrKey, TON addresses.
bs58 = { version = "0.5", features = ["check"] }
bech32 = "0.11"
ripemd = "0.1"
tiny-keccak = { version = "2", features = ["keccak"] }
blake2 = "0.10"
# blake2b_simd: only crate that exposes BLAKE2b's personalisation field, which
# Zcash V5 (ZIP-244) sighash construction requires. The `blake2` crate's MAC
# variant covers keyed hashing but not personal-string parameterisation.
blake2b_simd = "1.0"
sha3 = "0.10"
data-encoding = "2"
crc = "3"

# ─── Bitcoin transaction signing (NOT derivation) ───────────────────
# Only used in chains/bitcoin.rs for consensus serialization + sighashes.
# Derivation/HD code intentionally avoids this crate; see
# derivation/bitcoin_primitives.rs for the hand-rolled BIP-32 + address
# encoders that everything else uses.
bitcoin = { version = "0.32", features = ["rand-std"] }

# ─── Seed envelope encryption ───────────────────────────────────────
# AES-256-GCM envelope encryption for seed phrases at rest. Master key
# is stored in the platform keychain; Rust owns encrypt/decrypt logic.
aes-gcm = "0.10"

# ─── Secret hygiene ─────────────────────────────────────────────────
# Wraps mnemonics, seeds, private keys, and HMAC outputs so they scrub
# on drop instead of leaking through reused buffers.
zeroize = { version = "1", features = ["alloc", "derive"] }

# ─── FFI + serialization ────────────────────────────────────────────
# uniffi: generates Swift bindings for the public surface in service.rs.
# serde + serde_json: every cross-FFI request/response struct, plus
#   send previews, fetch responses, store models, token registries.
# thiserror: derive macros for typed errors (store, chains).
# hex: encoding output strings (private keys, public keys, hashes).
uniffi = { version = "0.29", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hex = "0.4"

# ─── Networking + async runtime ──────────────────────────────────────
# reqwest: Esplora/Etherscan/RPC fetches (chains/, fetch/).
# tokio + futures: async runtime for chain clients, fetch, store, service.
# base64: HTTP basic auth, RPC payloads, TON address encoding.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json", "gzip"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
base64 = "0.22"

# ─── Persistence + config + entropy ─────────────────────────────────
# rusqlite: wallet store and key-pool tables (store/wallet_db.rs),
#   also used by service.rs for wallet lifecycle operations.
# toml: parse the bundled chain registry config.
# rand: OS entropy for fresh-mnemonic generation in service.rs.
parking_lot = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
rand = "0.8"

[dev-dependencies]
# HTTP mock server for chain-client integration tests.
wiremock = "0.6"
